--- a/src/sop-visualizations.Rmd
+++ b/src/sop-visualizations.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Assessing the State of Practice of addressing Threats to Validity in Crossover-Design Experiments: Visualizations'
-author: "Anonymous Author"
+author: "Julian Frattini"
 date: '2024-05-22'
 output: html_document
 ---
